Fixed z-index in header

--- a/css/_menu.scss
+++ b/css/_menu.scss
@@ -12,6 +12,7 @@ header {
   width: 100%;
   margin: 0;
   padding: 0;
+  z-index: 3;
 }
 
 
@@ -76,7 +77,7 @@ nav {
   transition: all 0.7s cubic-bezier(0.165, 0.84, 0.44, 1);
   opacity: 0;
   visibility: hidden;
-  z-index: 2;
+  z-index: 3;
 }
 
 input:checked+.menu nav {
